# ASR-Mobile

./: .gitignore  README.md  window.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/java/com/example/asrmobile/: MainActivity.kt
model_benchmark/: benchmark_models.py  benchmark_report.txt  benchmark_results.csv
